# pc

./: .gitignore  README.md
samples/coroutines/: CMakeLists.txt
samples/coroutines/00_generator/: 00_generator.cpp  CMakeLists.txt
samples/coroutines/01_coro_handle/: 01_coro_handle.cpp  CMakeLists.txt
samples/coroutines/02_resumable/: 02_resumable.cpp  CMakeLists.txt
samples/coroutines/03_coro_internals/: 03_coro_internals.cpp  CMakeLists.txt
samples/coroutines/04_custom_generator/: 04_custom_generator.cpp  CMakeLists.txt
samples/coroutines/04_task/: 04_task.cpp  CMakeLists.txt
samples/coroutines/05_custom_generator_2/: 05_custom_generator_2.cpp  CMakeLists.txt
samples/coroutines/06_custom_generator_3/: 06_custom_generator_3.cpp  CMakeLists.txt
samples/coroutines/07_simple_awaiter/: 07_simple_awaiter.cpp  CMakeLists.txt
samples/coroutines/07_task/: 07_task.cpp  CMakeLists.txt  awaitable_traits.h  sync_wait.h  task.h
samples/coroutines/08_simple_awaiter_2/: 08_simple_awaiter_2.cpp  CMakeLists.txt
samples/coroutines/09_simple_awaiter_3/: 09_simple_awaiter_3.cpp  CMakeLists.txt
samples/coroutines/10_continuation/: 10_continuation.cpp  CMakeLists.txt
samples/coroutines/11_task/: 11_task.cpp  CMakeLists.txt  manual_reset_event.h
samples/coroutines/12_boost_cobalt/: 12_boost_cobalt.cpp  CMakeLists.txt
samples/coroutines/13_delay/: 13_delay.cpp  CMakeLists.txt
samples/coroutines/14_co_main/: 14_co_main.cpp  CMakeLists.txt
samples/coroutines/15_promise/: 15_promise.cpp  CMakeLists.txt
samples/coroutines/16_cobalt_task/: 16_cobalt_task.cpp  CMakeLists.txt
samples/coroutines/17_simple_http_client/: 17_simple_http_client.cpp  CMakeLists.txt
samples/coroutines/18_simple_http_client_2/: 18_simple_http_client_2.cpp  CMakeLists.txt
samples/coroutines/19_fairy_tale/: 19_fairy_tale.cpp  CMakeLists.txt
samples/coroutines/20_fairy_tale/: 20_fairy_tale.cpp  CMakeLists.txt
samples/deadlocks/: CMakeLists.txt
samples/deadlocks/dining_philosophers_deadlock/: CMakeLists.txt  dining_philosophers_deadlock.cpp
samples/deadlocks/dining_philosophers_with_ordering/: CMakeLists.txt  dining_philosophers_with_ordering.cpp
samples/deadlocks/dining_philosophers_with_scoped_lock/: CMakeLists.txt  dining_philosophers_with_scoped_lock.cpp
samples/deadlocks/dining_philosophers_with_waiter/: CMakeLists.txt  dining_philosophers_with_waiter.cpp
samples/deadlocks/hierarchical_mutex/: CMakeLists.txt  hierarchical_mutex.cpp
samples/deadlocks/nonrecursive_mutex_deadlock/: CMakeLists.txt  nonrecursive_mutex_deadlock.cpp
samples/deadlocks/stack_assignment_deadlock/: CMakeLists.txt  stack_assignment_deadlock.cpp
samples/deadlocks/stack_assignment_fix/: CMakeLists.txt  stack_assignment_fix.cpp
samples/deadlocks/stack_assignment_segfault/: CMakeLists.txt  stack_assignment_segfault.cpp
samples/memory_model/: CMakeLists.txt
samples/memory_model/acquire_release/: CMakeLists.txt  acquire_release.cpp
samples/memory_model/atomic_flag/: CMakeLists.txt  atomic_flag.cpp
samples/memory_model/atomic_is_lock_free/: CMakeLists.txt  atomic_is_lock_free.cpp
samples/memory_model/atomic_prototype/: CMakeLists.txt  atomic_prototype.cpp
samples/memory_model/call_once/: CMakeLists.txt  call_once.cpp
samples/memory_model/lazy_init/: CMakeLists.txt  lazy_init.cpp
samples/memory_model/lazy_init_atomic_dcl_bench/: CMakeLists.txt  lazy_init_atomic_dcl_bench.cpp
samples/memory_model/lazy_init_atomic_dcl_mem_order/: CMakeLists.txt  lazy_init_atomic_dcl_mem_order.cpp
samples/memory_model/lazy_init_atomic_dcl_optimized/: CMakeLists.txt  lazy_init_atomic_dcl_optimized.cpp
samples/memory_model/lazy_init_bench/: CMakeLists.txt  lazy_init_bench.cpp
samples/memory_model/lazy_init_dcl_wrong_bench/: CMakeLists.txt  lazy_init_dcl_wrong_bench.cpp
samples/memory_model/lazy_init_ts/: CMakeLists.txt  lazy_init_ts.cpp
samples/memory_model/lazy_init_ts_bench/: CMakeLists.txt  lazy_init_ts_bench.cpp
samples/memory_model/lazy_init_ts_spin_acq_rel_bench/: CMakeLists.txt  lazy_init_ts_spin_acq_rel_bench.cpp
samples/memory_model/lazy_init_ts_spin_bench/: CMakeLists.txt  lazy_init_ts_spin_bench.cpp
samples/memory_model/lazy_init_with_call_once/: CMakeLists.txt  lazy_init_with_call_once.cpp
samples/memory_model/modification_order/: CMakeLists.txt  modification_order.cpp
samples/memory_model/object_storage/: CMakeLists.txt  object_storage.cpp
samples/memory_model/relaxed_ordering/: CMakeLists.txt  relaxed_ordering.cpp
samples/memory_model/seq_cst_total_order/: CMakeLists.txt  seq_cst_total_order.cpp
samples/memory_model/thread_fence/: CMakeLists.txt  thread_fence.cpp
samples/multithreading/: CMakeLists.txt
samples/multithreading/dangling-references/: CMakeLists.txt  dangling-references.cpp
samples/multithreading/hello-world/: CMakeLists.txt  main.cpp
samples/multithreading/hello-world-detach/: CMakeLists.txt  main.cpp
samples/multithreading/hello-world-jthread/: CMakeLists.txt  main.cpp
samples/multithreading/object-as-thread-function/: CMakeLists.txt  object-as-thread-function.cpp
samples/multithreading/parallel-accumulate/: CMakeLists.txt  parallel-accumulate.cpp
samples/multithreading/sync-stream/: CMakeLists.txt  sync-stream.cpp
samples/multithreading/thread-fn-params/: CMakeLists.txt  thread-fn-params.cpp
samples/multithreading/thread-id/: CMakeLists.txt  thread-id.cpp
samples/multithreading/thread-ownership/: CMakeLists.txt  thread-ownership.cpp
samples/opencl/: CMakeLists.txt
samples/opencl/01_list_devices/: 01_list_devices.cpp  CMakeLists.txt
samples/opencl/02_add_vectors/: 02_add_vectors.cpp  CMakeLists.txt
samples/opencl/03_mult_matrices/: 03_mult_matrices.cpp  CMakeLists.txt
samples/opencl/04_mult_matrices_tiled/: 04_mult_matrices_tiled.cpp  CMakeLists.txt
samples/opencl/05_ooo_mult_matrices_tiled/: 05_ooo_mult_matrices_tiled.cpp  CMakeLists.txt
samples/parallel_algorithms/: CMakeLists.txt
samples/parallel_algorithms/for_each/: CMakeLists.txt  (+1 more)
samples/shared_data/: CMakeLists.txt
samples/thread_synchronization/: CMakeLists.txt
(+185 files in other folders)
